# keel

./: .gitignore  .trivyignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  security.yml
bench/: run_benchmarks.py
docs/: BENCHMARKS.md  PHASE1_STATUS.md  PHASE2_STATUS.md  PHASE3_STATUS.md  PHASE4_STATUS.md  QUICKSTART.md  ROADMAP.md  SDLC-POLICY.md
docs/adr/: 0000-template.md  0001-kir-taxonomy.md  0002-event-envelope.md  0003-asyncio-only.md  0004-pydantic-substrate.md  0006-viewer-stack.md  0007-memory-events.md
examples/: research_pipeline.py
keel/: __init__.py  cli.py
keel/authoring/: __init__.py  api.py  import_crewai.py
keel/executor/: engine.py  gate.py  lease.py  replay.py  state.py
keel/kir/: compile.py  schema.py  schemas_registry.py
keel/services/: audit.py  budget.py  context.py  cost.py  gate_service.py  memory.py  nodes.py  notify.py  policy.py  replay.py  runner.py  scheduler.py  scheduler_nats.py  simulate.py  triggers.py  worker.py
keel/services/evals/: __init__.py  case.py  junit.py  runner.py
keel/services/model/: handlers.py  port.py  pricing.py  ratelimit.py  router.py
keel/services/model/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
keel/services/tools/: _example_tools.py  contract.py  gateway.py  sandbox.py  sandbox_runner.py
keel/substrate/: catalog.py  events.py  otel.py  ports.py  redact.py  tracebus.py
keel/substrate/store/: base.py  memory.py  postgres.py  sqlite.py
keel/viewer/: __init__.py  app.py  spa.py
scripts/org/: protect.sh
tests/chaos/: bench_overhead.py  bench_viewer.py  invariant_checker.py  test_429_storm.py  test_budget_no_bypass.py  test_kill_resume.py  test_load_5k.py  test_overhead.py  test_phase3_exit_gate.py  test_policy_redteam.py  test_structured_output.py  test_tool_sandbox.py  test_viewer_bench.py  test_worker_kill.py
tests/golden/: research_pipeline.kir.json  test_context_tokens.py  test_crewai_import.py  test_crewai_port.py  test_router_quality.py  test_simulation_accuracy.py
tests/property/: test_fold_invariants.py  test_kir_roundtrip.py
tests/unit/: test_assertions.py  test_audit_chain.py  test_bus_backpressure.py  test_cost_rollup.py  test_gate_webhook.py  test_kir_validation.py  test_memory_traced.py  test_nodes.py  test_otel_spans.py  test_pg_parity.py  test_pricing.py  test_provider_errors.py  test_record_case.py  test_redact.py  test_replay_identity.py  test_runner.py  test_scheduler_nats.py  test_store_dupe.py  test_triggers.py  test_viewer.py
